# cxxprop

./: CMakeLists.txt  README.md
include/cxxprop/: properties.hpp
src/: CMakeLists.txt  properties.cpp
tests/: CMakeLists.txt  test_properties.cpp
